docs: fix asciidoc documentation generation